--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -12,8 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the data\n",
-    "data = pd.read_csv('/Users/meng_fanze/Library/CloudStorage/OneDrive-Chalmers/Master 1/MVE441 Statistic learning for big data/Project 1/TCGAdata.txt', delimiter = ' ')\n",
-    "labels = pd.read_csv('/Users/meng_fanze/Library/CloudStorage/OneDrive-Chalmers/Master 1/MVE441 Statistic learning for big data/Project 1/TCGAlabels', delimiter = ' ')"
+    "data = pd.read_csv('MVE441 Statistic learning for big data/Project 1/TCGAdata.txt', delimiter = ' ')\n",
+    "labels = pd.read_csv('MVE441 Statistic learning for big data/Project 1/TCGAlabels', delimiter = ' ')"
    ]
   },
   {
